--- a/index.html
+++ b/index.html
@@ -15,44 +15,218 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Modern-web-design</h1>
-        <p>Modern Web Design Class Files</p>
+			<h1>Flying squirrel</h1>
+		</header>
+		<section>
+		<p>Flying squirrels (scientifically known as Pteromyini or Petauristini) are a tribe of 44 species of squirrels in the family Sciuridae. They are not capable of flight in the same way as birds or bats but are able to glide from one tree to another with the aid of a patagium, a furry, parachute-like membrane that stretches from wrist to ankle. Their long tail provides stability in flight. Anatomically they are very similar to other squirrels but have a number of adaptations to suit their life style; their limb bones are longer and their hand, foot bones and distal vertebrae are shorter. While flying they are able to steer and exert control over their glide path with their limbs and tail.</p>
 
-        <p class="view"><a href="https://github.com/alemieux3/modern-web-design">View the Project on GitHub <small>alemieux3/modern-web-design</small></a></p>
+		<p>Molecular studies have shown that flying squirrels are monophyletic and originated some 18–20 million years ago. Most are nocturnal and omnivorous, eating fruit, seeds, buds, flowers, insects, gastropods, spiders, fungi, bird's eggs and tree sap. The young are born in a nest and are at first naked and helpless. They are cared for by their mother and by five weeks are able to practice gliding skills so that by ten weeks they are ready to leave the nest.</p>
+		</section>
 
+		<section>
+		<h2>Description</h2>
+
+		<p>Flying squirrels are not capable of flight like birds or bats; instead, they glide between trees. They are capable of obtaining lift within the course of these flights, with flights recorded to 90 meters (295 ft).[2][3] The direction and speed of the animal in midair are varied by changing the positions of its limbs, largely controlled by small cartilaginous wrist bones. The wrist is connected to the styliform cartilage, which forms a wing tip used during gliding. After being extended, the wing tip may adjust to various angles, controlling aerodynamic movements.[4][5] The wrist also changes the tautness of the patagium, a furry parachute-like membrane that stretches from wrist to ankle.[5] It has a fluffy tail that stabilizes in flight. The tail acts as an adjunct airfoil, working as an air brake before landing on a tree trunk.[6]</p>
+
+		<p>The colugos, Petauridae, and Anomaluridae are gliding mammals which are similar to flying squirrels because of convergent evolution. These mammals can glide through the trees, but they do not actually fly (like birds and bats). They have a membrane of skin on either side of their body.</p>
+
+		<p>Prior to the 21st century, the evolutionary history of the flying squirrel was frequently debated.[7] This debate was clarified greatly as a result of two molecular studies.[8][9] These studies found support that flying squirrels originated 18–20 million years ago, are monophyletic, and have a sister relationship with tree squirrels. Due to their close ancestry, the morphological differences between flying squirrels and tree squirrels reveal insight into the formation of the gliding mechanism. Compared to squirrels of similar size, flying squirrels, northern and southern flying squirrels show lengthening in bones of the lumbar vertebrae and forearm, whereas bones of the feet, hands, and distal vertebrae are reduced in length. Such differences in body proportions reveal the flying squirrels’ adaptation to minimize wing loading and to increase more maneuverability while gliding.[10]</p>
+
+		<p>Several hypotheses have attempted to explain the evolution of gliding in flying squirrels.[11] One possible explanation is related to energy efficiency and foraging.[12][13] Gliding is an energetically efficient way to progress from one tree to another while foraging, as opposed to climbing down trees and maneuvering on the ground floor or executing dangerous leaps in the air.[12] By gliding at high speeds, flying squirrels can rummage through a greater area of forest more quickly than tree squirrels. Flying squirrels can glide long distances by increasing their aerial speed and increasing their lift.[13] Other hypotheses state that the mechanism evolved to avoid nearby predators and prevent injuries. If a dangerous situation arises on a specific tree, flying squirrels can glide to another, and thereby typically escape the previous danger.[13][14] Furthermore, take-off and landing procedures during leaps, implemented for safety purposes, may explain the gliding mechanism. While leaps at high speeds are important to escape danger, the high-force impact of landing on a new tree could be detrimental to a squirrel’s health.[13] Yet the gliding mechanism of flying squirrels involves structures and techniques during flight that allow for great stability and control. If a leap is miscalculated, a flying squirrel may easily steer back onto the original course by using its gliding ability.[13] A flying squirrel also creates a large glide angle when approaching its target tree, decreasing its velocity due to an increase in air resistance and allowing all four limbs to absorb the impact of the target.[13][15]</p>
+		</section>
+
+		<section>
+		<h2>Taxonomy</h2>
+
+		<p>The largest of the species is the woolly flying squirrel (Eupetaurus cinereus). The two species of the genus Glaucomys (Glaucomys sabrinus and Glaucomys volans) are native to North America, and the Siberian flying squirrel is native to parts of northern Europe (Pteromys volans).</p>
+
+    	<ul>
+    		<li>Pliopetaurista
+        		<ul>
+        			<li>Pliopetaurista kollmanni Daxner-Höck, 2004[1]</li>
+        		</ul>
+        	</li>
+        </ul>
+
+		<p>Thorington and Hoffman (2005) recognize 15 genera of flying squirrels in two subtribes.</p>
+
+		<p>Tribe Pteromyini – flying squirrels</p>
+
+    	<ul>
+    		<li>Subtribe Glaucomyina
+        		<ul>
+        			<li>Genus Eoglaucomys
+        				<ul>
+        					<li>Kashmir flying squirrel, Eoglaucomys fimbriatus</li>
+        				</ul>
+        			</li>
+        		</ul>
+        	</li>
+        </ul>
+        <ul>
+        	<li>Genus Glaucomys – New World flying squirrels (American flying squirrels), North America
+            	<ul>
+            		<li>Southern flying squirrel, Glaucomys volans</li>
+            		<li>Northern flying squirrel, Glaucomys sabrinus</li>
+            	</ul>
+            </li>
+        </ul>
+        <ul>
+        	<li>Genus Hylopetes, Southeast Asia
+            	<ul>
+            		<li>Particolored flying squirrel, Hylopetes alboniger</li>
+            		<li>Afghan flying squirrel, Hylopetes baberi</li>
+            		<li>Bartel's flying squirrel, Hylopetes bartelsi</li>
+            		<li>Gray-cheeked flying squirrel, Hylopetes lepidus</li>
+            		<li>Palawan flying squirrel, Hylopetes nigripes</li>
+            		<li>Indochinese flying squirrel, Hylopetes phayrei</li>
+            		<li>Jentink's flying squirrel, Hylopetes platyurus</li>
+            		<li>Sipora flying squirrel, Hylopetes sipora</li>
+            		<li>Red-cheeked flying squirrel, Hylopetes spadiceus</li>
+            		<li>Sumatran flying squirrel, Hylopetes winstoni</li>
+            	</ul>
+            </li>
+        </ul>
+        <ul>
+        	<li>Genus Iomys, Malaysia and Indonesia
+            	<ul>
+            		<li>Javanese flying squirrel (Horsfield's flying squirrel), Iomys horsfieldi</li>
+            		<li>Mentawi flying squirrel, Iomys sipora</li>
+            	</ul>
+            </li>
+        </ul>
+        <ul>
+        	<li>Genus Petaurillus – pygmy flying squirrels, Borneo and the Malay Peninsula
+            	<ul>
+            		<li>Lesser pygmy flying squirrel, Petaurillus emiliae</li>
+            		<li>Hose's pygmy flying squirrel, Petaurillus hosei</li>
+            		<li>Selangor pygmy flying squirrel, Petaurillus kinlochii</li>
+            	</ul>
+            </li>
+        </ul>
+        <ul>
+        	<li>Genus Petinomys, Southeast Asia
+            	<ul>
+            		<li>Basilan flying squirrel, Petinomys crinitus</li>
+            		<li>Travancore flying squirrel, Petinomys fuscocapillus</li>
+            		<li>Whiskered flying squirrel, Petinomys genibarbis</li>
+            		<li>Hagen's flying squirrel, Petinomys hageni</li>
+            		<li>Siberut flying squirrel, Petinomys lugens</li>
+            		<li>Mindanao flying squirrel, Petinomys mindanensis</li>
+            		<li>Arrow flying squirrel, Petinomys sagitta</li>
+            		<li>Temminck's flying squirrel, Petinomys setosus</li>
+            		<li>Vordermann's flying squirrel, Petinomys vordermanni</li>
+            	</ul>
+            </li>
+        </ul>
+    <ul>
+    	<li>Subtribe Pteromyina
+        	<ul>
+        		<li>Genus Aeretes, northeastern China
+        			<ul>
+            			<li>Groove-toothed flying squirrel (North Chinese flying squirrel), Aeretes melanopterus</li>
+            		</ul>
+            	</li>
+            </ul>
 
         <ul>
-          <li><a href="https://github.com/alemieux3/modern-web-design/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/alemieux3/modern-web-design/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/alemieux3/modern-web-design">View On <strong>GitHub</strong></a></li>
+        	<li>Genus Aeromys – large black flying squirrels, Thailand to Borneo
+            	<ul>
+            		<li>Black flying squirrel, Aeromys tephromelas</li>
+            		<li>Thomas's flying squirrel, Aeromys thomasi</li>
+            	</ul>
+            </li>
         </ul>
-      </header>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <ul>
+        	<li>Genus Belomys, Southeast Asia
+            	<ul>
+            		<li>Hairy-footed flying squirrel, Belomys pearsonii</li>
+            	</ul>
+            </li>
+        </ul>
+        <ul>
+        	<li>Genus Biswamoyopterus, India and Bangladesh
+            	<ul>
+            		<li>Namdapha flying squirrel, Biswamoyopterus biswasi</li>
+            	</ul>
+            </li>
+        </ul>
+        <ul>
+        	<li>Genus Eupetaurus, Kashmir; rare
+        		<ul>
+        			<li>Woolly flying squirrel, Eupetaurus cinereus</li>
+        		</ul>
+        	</li>
+        </ul>
+        <ul>
+        	<li>Genus Petaurista, Southeast Asia
+            	<ul>
+            		<li>Red and white giant flying squirrel, Petaurista alborufus</li>
+            		<li>Spotted giant flying squirrel, Petaurista elegans</li>
+            		<li>Hodgson's giant flying squirrel, Petaurista magnificus</li>
+            		<li>Bhutan giant flying squirrel, Petaurista nobilis</li>
+            		<li>Indian giant flying squirrel, Petaurista philippensis</li></li>
+            		<li>Chinese giant flying squirrel, Petaurista xanthotis</li>
+            		<li>Japanese giant flying squirrel, Petaurista leucogenys</li>
+            		<li>Red giant flying squirrel, Petaurista petaurista</li>
+            	</ul>
+            </li>
+        </ul>
+        <ul>
+        	<li>Genus Pteromys – Old World flying squirrel, Finland to Japan
+        		<ul>
+        			<li>Liberian flying squirrel, Pteromys volans Pacific coast to the Baltic Sea</li>
+            		<li>Japanese dwarf flying squirrel, Pteromys momonga</li>
+            	</ul>
+            </li>
+        </ul>
+        <ul>
+        	<li>Genus Pteromyscus, southern Thailand to Borneo
+        		<ul>
+        			<li>Smoky flying squirrel, Pteromyscus pulverulentus</li>
+        		</ul>
+        	</li>
+        </ul>
+        <ul>
+        	<li>Genus Trogopterus, China
+        		<ul>
+        			<li>Complex-toothed flying squirrel, Trogopterus xanthipes</li>
+        		</ul>
+        	</li>
+        </ul>
+       </li>
+    </ul>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>Three new species of flying squirrel have been found in the northeastern state of India of Arunachal Pradesh.[16][17][18] Their holotypes are preserved in the collection of the Zoological Survey of India, Kolkata, India. These are:</p>
+	<ul>
+		<li>Mechuka giant flying squirrel (Petaurista mechukaensis)</li>
+		<li>Mishmi Hills giant flying squirrel (Petaurista mishmiensis)</li>
+    	<li>Mebo giant flying squirrel (Petaurista siangensis)</li>
+   	</ul>
+</section>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<section>
+<h2>Life cycles</h2>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>The life expectancy of flying squirrels in the wild is about six years, but flying squirrels can live up to fifteen years in zoos. The mortality rate in young flying squirrels is high because of predators and diseases. Predators of flying squirrels include tree snakes, raccoons, owls, martens, fishers, coyotes, bobcats, and feral cats.[2] In the Pacific Northwest of North America, the northern spotted owl (Strix occidentalis) is a common predator of flying squirrels.</p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<p>Flying squirrels are usually nocturnal,[19] since they are not adept at escaping birds of prey that hunt during the daytime.[2] They eat according to their environment; they are omnivorous, and will eat whatever food they can find. The North American southern flying squirrel eats seeds, insects, gastropods (slugs and snails), spiders, shrubs, flowers, fungi, and tree sap.[citation needed]</p>
+</section>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<section>
+<h2>Reproduction</h2>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<p>The mating season for flying squirrels is during February and March. When the infants are born, the female squirrels live with them in maternal nest sites. The mothers nurture and protect them until they leave the nest. The males do not participate in nurturing their offspring.[20]</p>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>At birth, flying squirrels are mostly hairless, apart from their whiskers, and most of their senses are not present. Their internal organs are visible through the skin, and their sex can be signified. By week five, they are almost fully developed. At that point, they can respond to their environment and start to develop a mind of their own. Through the upcoming weeks of their lives, they practice leaping and gliding. After two and a half months, their gliding skills are perfected, they are ready to leave the nest, and are capable of independent survival.[21]</p>
+</section>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<section>
+<h2>Diet</h2>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
+<p>Flying squirrels can easily forage for food in the night, given their highly developed sense of smell. They harvest fruits, nuts, fungi, and birds' eggs.[2][22] Gliding conserves energy.[3] Many gliders have specialized diets and there is evidence to believe that gliders may be able to take advantage of scattered protein deficient food.[23] Additionally, gliding is a fast form of locomotion and by reducing travel time between patches, they can increase the amount of foraging time.[23]</p>
+</section>
+
       <footer>
         <p>This project is maintained by <a href="https://github.com/alemieux3">alemieux3</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
