--- a/habits.html
+++ b/habits.html
@@ -38,6 +38,11 @@
 
 <p>Flying squirrels can easily forage for food in the night, given their highly developed sense of smell. They harvest fruits, nuts, fungi, and birds' eggs.[2][22] Gliding conserves energy.[3] Many gliders have specialized diets and there is evidence to believe that gliders may be able to take advantage of scattered protein deficient food.[23] Additionally, gliding is a fast form of locomotion and by reducing travel time between patches, they can increase the amount of foraging time.[23]</p>
 </section>
+
+ <footer>
+        <p>This project is maintained by <a href="https://github.com/alemieux3">alemieux3</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
 	</body>
 
 </html>
