--- a/taxonomy.html
+++ b/taxonomy.html
@@ -186,7 +186,10 @@
     	<li>Mebo giant flying squirrel (Petaurista siangensis)</li>
    	</ul>
 </section>
-		
+	 <footer>
+        <p>This project is maintained by <a href="https://github.com/alemieux3">alemieux3</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>	
 	</body>
 
 </html>
