--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
   </head>
   <body>
     <div class="wrapper">
+    	<nav role="navigation">
+    		<ul>
+    			<li><a href="./index.html">About</a></li>
+    			<li><a href="./taxonomy.html">Taxonomy</a></li>
+    			<li><a href="./habits.html">Habits</a></li>
+    		</ul>
+    		
+    		
+    	</nav>
       <header>
 			<h1>Flying squirrel</h1>
 		</header>
