--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <![endif]-->
   </head>
   <body>
-    <div class="wrapper">
+    <main>
     	<nav role="navigation">
     		<ul>
     			<li><a href="./index.html">About</a></li>
@@ -48,7 +48,7 @@
         <p>This project is maintained by <a href="https://github.com/alemieux3">alemieux3</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
-    </div>
+    </main>
     <script src="javascripts/scale.fix.js"></script>
     
   </body>
