--- a/taxonomy.html
+++ b/taxonomy.html
@@ -11,7 +11,7 @@
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 		<link rel="stylesheet" href="stylesheets/styles.css">
-    		<link rel="stylesheet" href="stylesheets/github-light.css">
+    		<link rel="stylesheet" href="main.css">
 
 		<style>
 
