--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Modern-web-design by alemieux3</title>
-
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
