--- a/habits.html
+++ b/habits.html
@@ -10,6 +10,7 @@
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
+		<link rel="stylesheet" href="normalize.css">
 		<link rel="stylesheet" href="main.css">
 
 		<style>
