Adding changed files

--- a/habits.html
+++ b/habits.html
@@ -10,16 +10,29 @@
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		<link rel="stylesheet" href="normalize.css">
-		<link rel="stylesheet" href="main.css">
-
-		<style>
-
-		</style>
+		<link rel="stylesheet" href="stylesheets/main.css">
+    	<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
+    	<script src="https://code.jquery.com/jquery-3.1.1.min.js"
+        integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+        crossorigin="anonymous"></script>
+    	<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
 
 	</head>
 
 	<body>
+		<main>
+			<nav role="navigation">
+    		<ul>
+    			<li><a href="./index.html">About</a></li>
+    			<li><a href="./taxonomy.html">Taxonomy</a></li>
+    			<li><a href="./habits.html">Habits</a></li>
+    		</ul>
+    		
+    		
+    	</nav>
+			<header class="header">
+				<h1>Habits</h1>
+			</header>
 <section>
 <h2>Life cycles</h2>
 
@@ -46,6 +59,7 @@
         <p>This project is maintained by <a href="https://github.com/alemieux3">alemieux3</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
+</main>
 	</body>
 
 </html>
