--- a/taxonomy.html
+++ b/taxonomy.html
@@ -7,22 +7,31 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" >
-		<!--[if lt IE 9]>
-			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
-		<link rel="stylesheet" href="normalize.css">
-    		<link rel="stylesheet" href="main.css">
-
-		<style>
-
-		</style>
-
-	</head>
-
-	<body>
+		<link rel="stylesheet" href="stylesheets/main.css">
+        <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+        integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+        crossorigin="anonymous"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
+    <!--[if lt IE 9]>
+        <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <main>
+        <nav role="navigation">
+            <ul>
+                <li><a href="./index.html">About</a></li>
+                <li><a href="./taxonomy.html">Taxonomy</a></li>
+                <li><a href="./habits.html">Habits</a></li>
+            </ul>
+            
+            
+        </nav>
+    <header class="header">
+            <h1>Taxonomy</h1>
+        </header>
 		<section>
-		<h2>Taxonomy</h2>
-
 		<p>The largest of the species is the woolly flying squirrel (Eupetaurus cinereus). The two species of the genus Glaucomys (Glaucomys sabrinus and Glaucomys volans) are native to North America, and the Siberian flying squirrel is native to parts of northern Europe (Pteromys volans).</p>
 
     	<ul>
@@ -193,6 +202,7 @@
         <p>This project is maintained by <a href="https://github.com/alemieux3">alemieux3</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>	
+        </main>
 	</body>
 
 </html>
